--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,10 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+
 @custom-variant dark (&:is(.dark *));
+@layer base {
+  body {
+    @apply bg-gray-200 dark:bg-black;
+   
+  }
+}
